# PCS3216

./: .gitignore  Cargo.toml  README.md  a.fita  a.out  build.sh  cmdLine.py  codePeeker.py  cpuVariables.py  ex.qck  folderOpen.py  helpList.py  initialScreen.py  interface.py  loader.fita  main.py  memoryApp.py  memoryApps.py  memoryDump.py  pyproject.toml  requirements.txt  run.sh  screen.py  test_assembler.py
src/: lib.rs  main.py  main.rs
src/processor/: assembler.rs  cpu.rs  linker.rs  memory.rs  mod.rs
src/pythonLib/: cmdLine.py  codePeeker.py  cpuVariables.py  helpList.py  initialScreen.py  interface.py  memoryApps.py  memoryDump.py  screen.py
